Fix basic contrast issues

--- a/src/css/generic/base.css
+++ b/src/css/generic/base.css
@@ -140,9 +140,9 @@ samp {
 
 kbd {
     padding: calc(var(--spacing) / 4) var(--spacing);
-    border: 1px solid var(--c-grey-light);
+    border: 1px solid var(--c-alt-light);
     border-radius: 4px;
-    box-shadow: 0 1px var(--c-grey-dark);
+    box-shadow: 0 1px var(--c-alt-dark);
     text-transform: capitalize;
 }
 
