--- a/src/css/generic/variables.css
+++ b/src/css/generic/variables.css
@@ -20,18 +20,18 @@
     /*
     * Colors
     */
-    --c-text: #222;
+    --c-text: hsl(0, 0%, 15%);
     --c-text-disabled: hsl(0, 0%, 70%);
-    --c-background: #fff;
+    --c-background: hsl(0, 0%, 100%);
+
     --c-focus: hsl(40, 80%, 50%);
 
-    --c-accent-light: hsl(220, 80%, 80%);
-    --c-accent:       hsl(220, 50%, 50%);
-    --c-accent-dark:  hsl(220, 50%, 40%);
+    --c-accent: hsl(220, 50%, 40%);
+    --c-accent-dark: hsl(220, 50%, 30%);
 
-    --c-grey-light: hsl(0, 0%, 80%);
-    --c-grey:       hsl(0, 0%, 50%);
-    --c-grey-dark:  hsl(0, 0%, 20%);
+    --c-alt-light: hsl(0, 0%, 80%);
+    --c-alt: hsl(0, 0%, 50%);
+    --c-alt-dark:  hsl(0, 0%, 20%);
 
     /*
     * Toolbox
