--- a/src/css/layout/toolbox.css
+++ b/src/css/layout/toolbox.css
@@ -1,6 +1,6 @@
 .toolbox {
-    --c-text: #fff;
-    --c-background: #222;
+    --c-text: #222;
+    --c-background: #efefef;
 
     position: fixed;
     will-change: transform;
