--- a/src/css/objects/form-elements.css
+++ b/src/css/objects/form-elements.css
@@ -36,26 +36,17 @@ button {
 
 input:disabled,
 button:disabled {
-    color: lightgrey;
+    color: hsl(0, 0%, 70%);
     color: var(--c-text-disabled);
-}
-
-input[type="email"],
-input[type="number"],
-input[type="password"],
-input[type="search"],
-input[type="text"],
-input[type="url"],
-button:disabled {
-    background-color: grey;
-    background-color: var(--c-grey);
 }
 
 input[type="submit"],
 button {
-    color: #fff;
-    background-color: cornflowerblue;
-    background-color: var(--c-accent);
+    color: hsl(220, 50%, 40%);
+    color: var(--c-accent);
+    background-color: #fff;
+    border: 2px solid;
+    border-radius: 3px;
 }
 
 .form-group {
@@ -78,8 +69,7 @@ button {
 
 input[type="submit"]:enabled:active,
 button:enabled:active {
-    background-color: royalblue;
-    background-color: var(--c-accent-dark);
+    color: #000;
 }
 
 input[type="submit"]:disabled:focus,
@@ -89,6 +79,7 @@ button:disabled:focus {
 
 .button--close {
     padding: calc(var(--spacing) / 2);
+    border: 0;
 }
 
 .button--close,
@@ -107,7 +98,7 @@ button:disabled:focus {
 }
 
 .form-group--switch:not(:last-child) {
-    border-bottom: 1px solid var(--c-grey-light);
+    border-bottom: 1px solid var(--c-alt-light);
 }
 
 .form-group--switch .form-label {
@@ -127,20 +118,20 @@ button:disabled:focus {
     padding: var(--offset);
     border: 0;
     border-radius: calc(var(--spacing) * 2 + var(--offset));
-    box-shadow: inset 0 0 calc(var(--offset) * 2) hsla(0, 0%, 0%, 0.5);
+    /*box-shadow: inset 0 0 calc(var(--offset) * 2) hsla(0, 0%, 0%, 0.5);*/
 }
 
 [aria-checked]:disabled {
-    background-color: var(--c-grey);
+    background-color: var(--c-alt);
 }
 
 [aria-checked="true"]:enabled {
-    background-color: cornflowerblue;
+    background-color: hsl(220, 50%, 40%);
     background-color: var(--c-accent);
 }
 
 [aria-checked="false"]:enabled {
-    background-color: var(--c-grey);
+    background-color: var(--c-alt);
 }
 
 [aria-checked] .state {
@@ -164,12 +155,12 @@ button:disabled:focus {
 [aria-checked="true"]:enabled .state--true,
 [aria-checked="false"]:enabled .state--false {
     background-color: #fff;
-    box-shadow:
+    /*box-shadow:
         inset 0 0 4px hsla(0, 0%, 0%, 0.3),
-        0 0 4px hsla(0, 0%, 0%, 0.3);
+        0 0 4px hsla(0, 0%, 0%, 0.3);*/
 }
 
 [aria-checked="true"]:disabled .state--true,
 [aria-checked="false"]:disabled .state--false {
-    background-color: var(--c-grey-light);
+    background-color: var(--c-alt-light);
 }
