--- a/src/css/objects/modal.css
+++ b/src/css/objects/modal.css
@@ -34,5 +34,5 @@
 
 .modal-content h2 {
     margin-bottom: 0;
-    border-bottom: 1px solid var(--c-grey-light);
+    border-bottom: 1px solid var(--c-alt-light);
 }
